# flask_auth_mvp

./: .flake8  .gitignore  Dockerfile  README.md  bandit_flask_auth_report.html  compose.yaml  env_example  generate_secrets.py  init_db.py  manage.py  mypy.ini  nginx.conf  pyproject.toml  requirements.txt  run.py  scan_secrets.sh  setup_docker.sh
.github/workflows/: lint.yaml
app/: __init__.py  custom_commands.py  forms.py  models.py  routes.py  routes.py._wit_app.original
app/templates/: base.html  dashboard.html  home.html  register.html
migrations/versions/: 1820ae8b8ca8_initial_migration.py  1a16b76abb35_increase_password_hash_length.py  e2ff5c330373_initial_migration.py  ee63e3c27f8d_rename_user_table_to_users.py
tests/: conftest.py  test_auth.py  test_command.py  test_db.py  test_pageload.py
