[tool.poetry]
name = "flask-auth-mvp"
version = "0.1.0"
description = "Flask authentication app"
authors = ["Nathaniel Andreano <Contact@CodeRacket.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.1.1"
Flask-Bcrypt = "1.0.1"
Flask-Login = "0.6.3"
Flask-SQLAlchemy = "3.1.1"
Flask-WTF = "1.2.2"
SQLAlchemy = "2.0.40"
email_validator = "2.2.0"
python-dotenv = "1.1.0"
gunicorn = "23.0.0"
bcrypt = "4.3.0"
blinker = "1.9.0"
click = "8.2.0"
dnspython = "2.7.0"
greenlet = "3.2.2"
idna = "3.10"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
MarkupSafe = "3.0.2"
packaging = "25.0"
typing_extensions = "4.13.2"
Werkzeug = "3.1.3"
WTForms = "3.2.1"
flask-migrate = "^4.1.0"
psycopg2 = "2.9.10"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
flake8 = "*"
isort = "*"
pylint = "*"
pytest = "*"
pytest-timeout = "*"
pytest-flask = "^1.3.0"
requests = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"