[tool.poetry]
name = "flask-auth-mvp"
version = "0.1.0"
description = "Flask authentication app"
authors = ["Nathaniel Andreano <Contact@CodeRacket.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
email-validator = "^2.2.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
flask-migrate = "^4.0.7"
flask-limiter = "^3.7.0"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pylint = "^3.3.1"
pytest = "^8.3.2"
pytest-timeout = "^2.3.1"
pytest-flask = "^1.3.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flask = "flask.cli:main"
